@@ -122,8 +122,9 @@ nil forcibly."
 		  (looking-at "\211PNG\r\n"))))
 	 t)
 	(t
-	 (message "ImageMagick's `convert' program is not available")
-	 (sit-for 1)
+	 (when w3m-imagick-convert-program
+	   (message "ImageMagick's `convert' program is not available")
+	   (sit-for 1))
 	 (setq w3m-imagick-convert-program nil
 	       w3m-resize-images nil)
 	 (put 'w3m-imagick-convert-program 'available-p 'no)
